force-app/main/default/objects/LAD_Assigned_Address__c/LAD_Assigned_Address__c.object-meta.xml
<CustomObject>
    <label>Assigned Address</label>
    <nameField>
        <label>Assigned Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>