force-app/main/default/objects/LAD_Assigned_Address__c/fields/LAD_Account__c.field-meta.xml
<CustomField>
    <fullName>LAD_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Address</relationshipLabel>
    <relationshipName>Assigned_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>