force-app/main/default/objects/LAD_Assigned_Address__c/fields/LAD_Address__c.field-meta.xml
<CustomField>
    <fullName>LAD_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Assigned Address</relationshipLabel>
    <relationshipName>Assigned_Address</relationshipName>
    <type>Lookup</type>
</CustomField>