force-app/main/default/objects/LAD_Assigned_Address__c/fields/LAD_Assigned_MDC__c.field-meta.xml
<CustomField>
    <fullName>LAD_Assigned_MDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned MDC</label>
    <referenceTo>AssociatedLocation</referenceTo>
    <relationshipLabel>Assigned Address</relationshipLabel>
    <relationshipName>Assigned_Address</relationshipName>
    <type>Lookup</type>
</CustomField>