force-app/main/default/objects/LAD_Assigned_Address__c/fields/LAD_Is_default__c.field-meta.xml
<CustomField>
    <fullName>LAD_Is_default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-8207</description>
    <label>Is default</label>
    <type>Checkbox</type>
</CustomField>